# drf-svelte-playground

./: README.md
backend/: README.md  devserver.py  pyproject.toml
backend/backend/dj/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
backend/backend/dj/app/: admin.py  apps.py  devserver_data.py  models.py
backend/backend/dj/app/templates/registration/: login.html
frontend/: .env.development  package-lock.json
frontend/src/: hooks.server.ts
frontend/src/routes/: +page.svelte  +page.ts
