[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django~=5.1.6",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-tws",
    "djangorestframework>=3.15.2",
]

[tool.uv.sources]
django-tws = { git = "https://github.com/alexpdp7/django-tws.git" }
